<resources>
    <string name="app_name">BeepTalk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="lorem">Etiam vitae lacus vel tellus eleifend egestas. Mauris sed justo facilisis, hendrerit felis at, accumsan lorem. Nulla eleifend euismod interdum. Maecenas eu scelerisque nisi. Vivamus nec dolor a purus viverra faucibus sed ac ante. Praesent et nisi aliquet, ultricies ex ut, commodo urna. Mauris et lacus malesuada, dictum felis ac, mattis lorem.</string>
    <string name="created_at">11/12/2022</string>
    <string name="upvotes">17.5K</string>
    <string name="reply_to">Replying to @Azerty klockenburg</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_btn">Post</string>
    <string name="choose_btn">Choose</string>
    <string name="desc_of_video">Description… Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue </string>
    <string name="activities_title">Activities</string>
    <string name="activities_activity_like">Liked your video</string>
    <string name="activities_reply">Replied on your comment: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt, diam sit amet convallis finibus, augue</string>
    <string name="followers_title">New Followers</string>
    <string name="followers_activity_follow">Started following you</string>
    <string name="followers_follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="change_your_old_password">Change your old password?</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_the_otp_code_sent_to">Enter the OTP code sent to</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="update_your_old_password">Update your old password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="recent_follower">Recent Follower</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="follow">Follow</string>
    <string name="no_recent_followers">No recent followers 😥</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="send">Send</string>
    <string name="view_all_replies">View all replies</string>
    <string name="reply">Reply</string>
    <string name="input_video_caption">Input video caption</string>
    <string name="replying_to">Replying to</string>
    <string name="comment_as">Comment as</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="post">Post</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="renaldi_addison">Renaldi Addison</string>
    <string name="renajaaaa">renajaaaa</string>
    <string name="_173">173</string>
    <string name="your_private_serotonin_booster">your private serotonin booster</string>
    <string name="comment">Comment</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="input_the_otp_to_proceed">Input the OTP to Proceed</string>
    <string name="_17_5k">17.5K</string>
    <string name="title">Title</string>
    <string name="this_is_notification_text">This is notification text</string>
    <string name="_2022_12_03">2022–12–03</string>
    <string name="followingYou">started following you</string>
    <string name="likeVid">liked your video</string>
    <string name="upvoteThread">upvote your thread</string>
    <string name="likeComment">liked your comment</string>
    <string name="likeReply">liked your reply</string>
    <string name="replyComment">replied to your comment</string>
    <string name="commentThread">commented on your thread</string>
    <string name="no_recent_notification">No recent notification 😥</string>
    <string name="notifications">Notifications</string>

    <string name="please_input_title">Please input title</string>
    <string name="please_choose_video">Please choose a video</string>
    <string name="start_uploading">Start uploading</string>
    <string name="post_created">"Post created!"</string>
    <string name="post_failed">Failed to create post!</string>
    <string name="log_out_success">Successfully Log Out</string>
    <string name="profile_picture_updated">Profile Picture Updated</string>
    <string name="delete_comment">Delete comment</string>
    <string name="are_your_sure_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comment_deleted">Comment deleted!</string>
    <string name="comment_failed_deleted">Failed to delete comment!</string>
    <string name="password_update_success">Password updated successfully!</string>
    <string name="password_update_failed">Failed to update password!</string>
    <string name="password_cannot_same">Password cannot be the same as the last password!</string>
    <string name="comment_posted">Comment posted!</string>
    <string name="comment_post_failed">Failed to post comment!</string>
    <string name="thread_posted">Thread posted!</string>
    <string name="thread_post_failed">Failed to post thread!</string>
    <string name="fields_cannot_empty">Fields cannot be empty!</string>
    <string name="comment_updated">Comment updated!</string>
    <string name="comment_update_failed">Failed to update comment!</string>
    <string name="username_taken">Username taken!</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="thread_updated">Thread updated!</string>
    <string name="thread_deleted">Thread deleted!</string>
    <string name="email_not_exists">Email doesn\'t exists!</string>
    <string name="only_logged_with_google">You only logged in with google sign in, cannot change password!</string>
    <string name="error_check_email">Error occurred when checking the email</string>
    <string name="input_valid_email">Please input valid email!</string>
    <string name="error_occured">Error occurred!</string>
    <string name="credentials_false">Credentials not found!</string>
    <string name="account_registere_success">Account registered successfully!</string>
    <string name="comment_added">Comment added!</string>
    <string name="comment_add_failed">Failed to comment!</string>
    <string name="reply_added">Reply added!</string>
    <string name="reply_add_failed">Failed to reply!</string>
    <string name="password_not_match">Password doesn\'t match!</string>
    <string name="code_cannot_empty">Code cannot be empty!</string>
    <string name="enter_a_valid_code">Please enter a valid code!</string>

    <string name="beep_talk_forgot_password">BeepTalk Forgot Password</string>
    <string name="forgot_password_otp">This is your BeepTalk forgot password OTP: %1$s</string>
    <string name="home">Home</string>
    <string name="thread">Thread</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
</resources>