<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <VideoView
            android:id="@+id/videoV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/videoTitleEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/videoV"
            app:layout_constraintLeft_toLeftOf="@id/videoV"
            android:hint="@string/input_video_caption"
            android:textSize="18sp"
            android:textFontWeight="900"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/secondaryTextColor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/chooseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_btn"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/postBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_btn"
            android:layout_margin="10dp" />

    </LinearLayout>

</LinearLayout>