<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.CreateThreadPage"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/edit"
            android:textAllCaps="false" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/delete"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cat_user"
            app:avatarViewBorderColor="@color/primaryContent"
            app:avatarViewBorderWidth="3dp"
            app:avatarViewIndicatorBorderColor="@color/primaryTextColor"
            app:avatarViewIndicatorBorderSizeCriteria="10"
            app:avatarViewIndicatorColor="@color/secondaryColor"
            app:avatarViewIndicatorEnabled="true"
            app:avatarViewIndicatorPosition="bottomRight"
            app:avatarViewIndicatorSizeCriteria="9"
            app:avatarViewInitialsTextStyle="bold"
            app:avatarViewShape="circle" />

        <EditText
            android:id="@+id/etThreadBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/what_s_happening"
            android:textAlignment="textStart"
            android:gravity="start" />

    </LinearLayout>

</LinearLayout>