<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cat_user"
            app:avatarViewBorderColor="@color/primaryContent"
            app:avatarViewBorderWidth="3dp"
            app:avatarViewIndicatorBorderColor="@color/primaryTextColor"
            app:avatarViewIndicatorBorderSizeCriteria="10"
            app:avatarViewIndicatorColor="@color/secondaryColor"
            app:avatarViewIndicatorEnabled="true"
            app:avatarViewIndicatorPosition="bottomRight"
            app:avatarViewIndicatorSizeCriteria="9"
            app:avatarViewInitialsTextStyle="bold"
            app:avatarViewShape="circle" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/replying_to" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tvReply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:paddingLeft="5dp"
            android:id="@+id/tvCommentBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnUpvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_upvote" />

            <TextView
                android:id="@+id/tvTotalVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upvotes" />

            <ImageButton
                android:id="@+id/btnDownvote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_downvote" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>