<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cat_user" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/primaryColor" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/createdDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2022_12_03" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="10dp"
        >

        <TextView
            android:id="@+id/replyBodyTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/likeReplyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_border_24" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/dislikeReplyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_thumb_down_24" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />


    </LinearLayout>

</LinearLayout>